adding in fix for tsup

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "lint": "biome check --write --error-on-warnings",
     "test": "pnpm lint && vitest run --coverage",
     "test:ci": "biome check --error-on-warnings && vitest run --coverage",
-    "build": "rimraf ./dist && tsup --format cjs,esm --dts",
+    "build": "rimraf ./dist && tsup src/index.ts --format cjs,esm --dts",
     "clean": "rimraf ./dist pnpm-lock.yaml node_modules coverage",
-    "prepare": "rimraf ./dist && tsup --format cjs,esm --dts"
+    "prepare": "rimraf ./dist && pnpm build"
   },
   "keywords": [
     "hyphen",
