--- a/package.json
+++ b/package.json
@@ -34,9 +34,14 @@
     "@biomejs/biome": "^2.3.5",
     "@faker-js/faker": "^10.1.0",
     "@swc/core": "^1.15.2",
+    "@testing-library/react": "^16.0.1",
     "@types/node": "^24.10.1",
+    "@types/react": "^18.3.18",
     "@vitest/coverage-v8": "^4.0.9",
     "dotenv": "^17.2.3",
+    "jsdom": "^25.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rimraf": "^6.1.0",
     "tsd": "^0.33.0",
     "tsup": "^8.5.1",
@@ -50,5 +55,8 @@
   "dependencies": {
     "@hyphen/browser-sdk": "^1.0.3",
     "hookified": "^1.13.0"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0"
   }
 }
