--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,8 +35,5 @@ jobs:
 
     - name: Publish
       run: |
-        npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
-        npm publish --ignore-scripts --access public
-      env:
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        pnpm publish --ignore-scripts --access public
 
