--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@types/react": "^18.3.18",
     "@vitest/coverage-v8": "^4.0.9",
     "dotenv": "^17.2.3",
-    "jsdom": "^25.0.1",
+    "happy-dom": "^20.0.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rimraf": "^6.1.0",
