--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.5.0",
   "description": "Hyphen SDK for React",
   "type": "module",
-  "main": "dist/index.cjs",
   "module": "dist/index.js",
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
     }
   },
   "types": "dist/index.d.ts",
