--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
   },
@@ -16,7 +15,7 @@
     "lint": "biome check --write --error-on-warnings",
     "test": "pnpm lint && vitest run --coverage",
     "test:ci": "biome check --error-on-warnings && vitest run --coverage",
-    "build": "rimraf ./dist && tsup src/index.ts --format cjs,esm --dts",
+    "build": "rimraf ./dist && tsup src/index.ts --format esm --dts",
     "clean": "rimraf ./dist pnpm-lock.yaml node_modules coverage",
     "prepare": "rimraf ./dist && pnpm build"
   },
