--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,9 +2,8 @@ name: release
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+  release:
+    types: [released]
 
 permissions:
   contents: read
