--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,5 +40,5 @@ jobs:
 
     - name: Publish
       run: |
-        pnpm publish --provenance --no-git-checks --ignore-scripts --access public
+        pnpm publish --no-git-checks --ignore-scripts --access public
 
