--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "lint": "biome check --write --error-on-warnings",
     "test": "pnpm lint && vitest run --coverage",
     "test:ci": "biome check --error-on-warnings && vitest run --coverage",
-    "build": "rimraf ./dist && tsup src/index.ts --format esm --dts",
+    "build": "tsup",
     "clean": "rimraf ./dist pnpm-lock.yaml node_modules coverage",
-    "prepare": "rimraf ./dist && pnpm build"
+    "prepare": "pnpm build"
   },
   "keywords": [
     "hyphen",
