--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@hyphen/react-sdk",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Hyphen SDK for React",
   "type": "module",
+  "main": "dist/index.js",
   "module": "dist/index.js",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.cjs"
     }
   },
   "types": "dist/index.d.ts",
@@ -52,7 +54,7 @@
     "LICENSE"
   ],
   "dependencies": {
-    "@hyphen/browser-sdk": "1.0.5",
+    "@hyphen/browser-sdk": "1.0.6",
     "hookified": "1.14.0"
   },
   "peerDependencies": {
