--- a/package.json
+++ b/package.json
@@ -32,22 +32,22 @@
   "author": "Team Hyphen <hello@hyphen.ai>",
   "license": "MIT",
   "devDependencies": {
-    "@biomejs/biome": "2.3.14",
-    "@faker-js/faker": "10.3.0",
-    "@swc/core": "1.15.11",
-    "@testing-library/react": "16.3.2",
-    "@types/node": "25.0.9",
-    "@types/react": "19.2.8",
-    "@vitest/coverage-v8": "4.0.18",
-    "dotenv": "17.2.3",
-    "happy-dom": "20.3.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "rimraf": "6.1.2",
-    "tsd": "0.33.0",
-    "tsup": "8.5.1",
-    "typescript": "5.9.3",
-    "vitest": "4.0.18"
+    "@biomejs/biome": "^2.3.14",
+    "@faker-js/faker": "^10.3.0",
+    "@swc/core": "^1.15.11",
+    "@testing-library/react": "^16.3.2",
+    "@types/node": "^25.0.9",
+    "@types/react": "^19.2.8",
+    "@vitest/coverage-v8": "^4.0.18",
+    "dotenv": "^17.2.4",
+    "happy-dom": "^20.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "rimraf": "^6.1.2",
+    "tsd": "^0.33.0",
+    "tsup": "^8.5.1",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   },
   "files": [
     "dist",
@@ -55,7 +55,7 @@
   ],
   "dependencies": {
     "@hyphen/browser-sdk": "^1.1.0",
-    "hookified": "1.15.1"
+    "hookified": "^1.15.1"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0"
