--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "hookified": "^1.15.1"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react": "^18.0.0 || ^19.0.0"
   }
 }
